--- a/JSC270_Lab3.ipynb
+++ b/JSC270_Lab3.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jlgrons/JSC270_Lab3/blob/main/JSC270_Lab3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Jennylin331431/JSC270_Lab3/blob/solutions/JSC270_Lab3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,6 +16,7 @@
         "id": "kMJ57E_JUUpk"
       },
       "source": [
+        "\n",
         "# Lab 3: Linear Regression in Python\n",
         "\n",
         "***\n",
@@ -24,6 +25,9 @@
         "In this lab, we will cover the basics of fitting a linear regression in python.  We will also go through some more EDA so you get more practice and are prepared for homework 2.\n",
         "\n",
         "The packages we'll cover are: `statsmodels`, `seaborn`, and `scikit-learn`.\n",
+        "\n",
+        "HEllo\n",
+        "\n",
         "***"
       ]
     },
